# file-service

./: .gitignore
file-service/: Cargo.toml
file-service/crates/common/src/: file.rs
file-service/crates/file-client-console/: Cargo.toml
file-service/crates/file-client-console/src/: flags.rs  main.rs
file-service/crates/file-server/src/: flags.rs  main.rs
file-service/crates/grpc-service/src/: file_client.rs  file_server.rs
file-service/crates/http-service/src/: file_server.rs
file-service/crates/http-service/src/sources/html/: index_axum.html
file-service/crates/service-protos/: Cargo.toml  build.rs
