[workspace]
members = [
    "crates/file-client-console",
    "crates/common",
    "crates/service-protos",
    "crates/file-server",
    "crates/grpc-service",
    "crates/http-service"]
resolver = "2"

[profile.release]
panic = 'abort'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
futures = { version = "0.3.31" }
tokio = { version = "1.40.0" }
tokio-stream = { version = "0.1.16" }
tonic = { version = "0.12.3" }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1" }
prost = { version = "0.13" }
prost-types = { version = "0.13" }
async-trait = { version = "0.1.83" }
serde = { version = "1.0" }
serde_json = { version = "1.0.133" }
clap = { version = "4.5.21" }
thiserror = { version = "2.0.3" }
log = {version = "0.4.22", features=["kv_unstable"]}
env_logger = { version = "0.11" }
axum = { version = "0.7.9" }
actix-web = { version = "4.0" }
actix-multipart = { version = "0.7.2" }
actix-files = { version = "0.6" }
hyper = { version = "1.5.1" }
mysql = { version = "25.0.1" }

#[workspace.build-dependencies]
#tonic-build = { version = "0.12.3" }
