[package]
name = "file-client"
version.workspace = true
edition.workspace = true

[dependencies]
service-protos = { path = "../service-protos" }
grpc-service = { path = "../grpc-service" }
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
