[package]
name = "service-protos"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-prost-build.workspace = true
